--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -87,7 +87,8 @@ main {
     align-items: center;
     justify-content: center;
     gap: 2rem;
-    margin-top: 5rem;
+    margin: 5rem auto;
+    max-width: 80%;
 }
 
 main img {
@@ -99,3 +100,16 @@ main h2, main p {
     padding: 0.5rem 0rem;
     line-height: 1.5rem;
 }
+
+/* About Me */
+
+.about-me {
+    padding: 1rem 5rem;
+    line-height: 1.5rem;
+}
+
+.about-me h2 {
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
