--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,6 +15,7 @@
     box-sizing: border-box;
     background-color: var(--primary-color);
     color: var(--secondary-color);
+    font-family: 'Montserrat', sans-serif;
 }
 
 a {
