--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -158,3 +158,49 @@ main h2, main p {
     width: auto;
 }
 
+/* Projects */
+
+.projects {
+    padding: 2rem 0rem;
+    margin-top: 2rem;
+}
+
+.projects-header {
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.projects-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.project-container {
+    text-align: center;
+    width: 21rem;
+    padding: 1rem;
+}
+
+.project-card {
+    background-color: #314453;
+    border-radius: 10px;
+    box-sizing: 0 3px 10px rgba(0, 0, 0, 0.1);
+    padding: 1.5rem;
+    margin: 0.75rem;
+}
+
+.project-image {
+    height: 60%;
+    width: 65%;
+}
+
+.project-container p {
+    padding: 0.5rem;
+}
+
+.project-title, .project-info, .project-link {
+    margin-bottom: 1rem;
+    background-color: #314453;
+}
+
