--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -185,7 +185,7 @@ main h2, main p {
 .project-card {
     background-color: #314453;
     border-radius: 10px;
-    box-sizing: 0 3px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
     padding: 1.5rem;
     margin: 0.75rem;
 }
@@ -201,6 +201,65 @@ main h2, main p {
 
 .project-title, .project-info, .project-link {
     margin-bottom: 1rem;
+    background-color: #314453;
+}
+
+/* Contact */
+
+.contact {
+    margin-top: 2rem;
+}
+
+.contact h2 {
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.contact-container {
+    max-width: 40rem;
+    margin: 0 auto;
+    padding: 0.9rem;
+    border-radius: 5px;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+    background-color: #314453;
+}
+
+.contact-form, .form-control {
+    background-color: #314453;
+}
+
+.form-control label {
+    line-height: 2.5rem;
+    background-color: #314453;    
+}
+
+.form-control textarea {
+    min-height: 6rem;
+}
+
+.input-field {
+    width: 100%;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+}
+
+.input-field::placeholder {
+    padding-left: 0.5rem;
+}
+
+#submit-button {
+    width: 100%;
+    padding: 0.75rem;
+    border: 2px solid var(--secondary-color);
+    border-radius: 5px;
+    transition: var(--transition);
+}
+
+#submit-button:hover {
+    cursor: pointer;
     background-color: #314453;
 }
 
