--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -263,14 +263,13 @@ main h2, main p {
     background-color: #314453;
 }
 
-/* Profile Links */
+/* Profile Links & Scroll to Top */
 
 .profile-links {
     display: flex;
-    flex-direction: column;
     position: fixed;
-    left: 1%;
-    bottom: 50%;
+    left: 2%;
+    bottom: 1%;
 }
 
 .profile-icon {
@@ -283,4 +282,28 @@ main h2, main p {
     cursor: pointer;
     width: 3.5rem;
     height: 3.5rem;
+}
+
+/* Scroll to Top */
+
+.scroll-to-top {
+    position: fixed;
+    right: 2%;
+    bottom: 1%;
+}
+
+.scroll-icon {
+    width: 2.5rem;
+    height: 2.5rem;
+}
+
+.scroll-icon:hover {
+    cursor: pointer;
+}
+
+/* Footer */
+
+footer {
+    padding: 3rem;
+    text-align: center;
 }
