--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -66,7 +66,7 @@ nav h1 {
 
 nav ul {
     display: flex;
-    gap: 2rem;
+    gap: 5rem;
 }
 
 .menu-button {
@@ -205,6 +205,7 @@ main h2, main p {
 }
 
 .project-title, .project-info, .project-link {
+    margin-top: 1rem;
     margin-bottom: 1rem;
     background-color: #314453;
 }
