--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -47,7 +47,7 @@ nav {
     justify-content: space-between;
     padding: 1.5rem 3.5rem;
     background-color: var(--primary-color);
-    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 3px 3px rgba(255, 255, 255, 0.2);
 }
 
 nav a {
@@ -147,7 +147,7 @@ main h2, main p {
     background-color: #314453;
     padding: 1rem;
     gap: 1rem;
-    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 3px 3px 3px rgba(255, 255, 255, 0.2);
     border-radius: 10px;
 }
 
@@ -191,7 +191,7 @@ main h2, main p {
 .project-card {
     background-color: #314453;
     border-radius: 10px;
-    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 3px 3px 3px rgba(255, 255, 255, 0.2);
     padding: 1.5rem;
     margin: 0.75rem;
 }
@@ -227,7 +227,7 @@ main h2, main p {
     margin: 0 auto;
     padding: 0.9rem;
     border-radius: 10px;
-    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 3px 3px 3px rgba(255, 255, 255, 0.2);
     background-color: #314453;
 }
 
@@ -312,6 +312,7 @@ main h2, main p {
 /* Footer */
 
 footer {
+    margin-top: 0.5rem;
     padding: 3rem;
     text-align: center;
 }
@@ -388,6 +389,6 @@ footer {
 
 @media only screen and (max-width: 420px) {
 
-    
+
 
 }
