--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -106,7 +106,7 @@ main h2, main p {
 /* About Me */
 
 .about-me {
-    padding: 6rem 5rem 1rem 5rem;
+    padding: 6rem 10rem 1rem 10rem;
     line-height: 1.5rem;
     margin-top: 5rem;
 }
@@ -211,6 +211,10 @@ main h2, main p {
     margin-top: 1rem;
     margin-bottom: 1rem;
     background-color: #314453;
+}
+
+.project-link {
+    text-decoration: underline;
 }
 
 /* Contact */
